--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -17,8 +17,10 @@
         android:id="@+id/edit_angle"
         android:layout_toRightOf="@+id/text_angle"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:inputType="numberDecimal"/>
     <ImageView
+        android:id="@+id/imgv"
         android:layout_below="@+id/edit_angle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
